# RENT

./: .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  paper.bib  paper.md  requirements.txt  setup.cfg  tox.ini
docs/: Makefile  baseclass.rst  binary_classification.rst  conf.py  index.rst  make.bat  quickstart.rst  regression.rst  theme.conf
examples/: BIC hyperparameter selection.ipynb  Classification_example.ipynb  Example.ipynb  Extensive_Hyperparameter_Search.ipynb  Extensive_hyperparameter_search.ipynb  Regression_example.ipynb  Stratified_kfold_RENT_classification.ipynb  Untitled.ipynb
examples/data/: wisconsin_test.csv  wisconsin_test_labels.csv  wisconsin_train.csv  wisconsin_train_labels.csv
src/RENT/: Classification_example.ipynb  Example.ipynb  RENT.py  RENT_parallel.py  Stratified_kfold_RENT_classification.ipynb  Untitled2.ipynb  parameter_selection.py  stability.py
src/RENT/.ipynb_checkpoints/: Classification_example-checkpoint.ipynb  Example-checkpoint.ipynb  Regression_example-checkpoint.ipynb
tests/: test_classification.py  test_classification_old.py  test_regression.py
tests/csv/: object_probabilities.csv  summary_criteria.csv  weights.csv
tests/csv_classification/: object_probabilities.csv  summary_criteria.csv  summary_objects.csv  weights.csv
tests/csv_regression/: object_errors.csv  summary_criteria.csv  summary_objects.csv  weights.csv
