

[metadata]
name = RENT
keywords=RENT
version = 0.0.1
license = "MIT license",
description = Repeated Elastic Net Technique
long_description = file: README.md
author =
author_email =
url=https://github.com/NMBU-Data-Science/RENT
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy >= 1.11.3
    pandas >= 1.0.5
    scikit-learn >= 0.22
    scipy >= 1.5.0
    hoggorm >= 0.13.3
    hoggormplot
    matplotlib >= 3.2.2
    seaborn >= 0.10

[options.packages.find]
where=src





[bdist_wheel]
universal = 1
